--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="./fonts/fonts.css" />
 	<title>Мяч Про</title>
 
 	<!-- DNS prefetch для API -->
@@ -14,10 +15,6 @@
 	<link rel="preload" href="/fonts/Montserrat-Regular.ttf" as="font" type="font/ttf" crossorigin>
 	<link rel="preload" href="/fonts/Montserrat-Bold.ttf" as="font" type="font/ttf" crossorigin>
 
-	<!-- Resource hints -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 	<!-- Оптимизация загрузки -->
 	<meta name="theme-color" content="#000000">
 	<meta name="mobile-web-app-capable" content="yes">
@@ -26,7 +23,6 @@
 
 	<!-- telegram api -->
 	<script src="https://telegram.org/js/telegram-web-app.js?57"></script>
-	<link rel="stylesheet" href="/fonts/fonts.css" />
 </head>
 
 <body>
