--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" href="/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="/fonts/fonts.css" />
-	<title>Мяч Про</title>
+	<title>Мяч Production</title>
 
 	<!-- DNS prefetch для API -->
-	<link rel="dns-prefetch" href="//api.myachpro.com">
+	<link rel="dns-prefetch" href="//server.myach-specialprojects.ru">
 
 	<!-- Preload критически важных ресурсов -->
 	<link rel="preload" href="/fonts/Montserrat-Regular.ttf" as="font" type="font/ttf" crossorigin>
