--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="/fonts/fonts.css" />
-	<title>Мяч Prod</title>
+	<title>Мяч Production</title>
 
 	<!-- DNS prefetch для API -->
 	<link rel="dns-prefetch" href="//server.myach-specialprojects.ru">
